--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,9 @@
 <body>
 
     <div id="cont">
-        <form action="/member" method="get">
-            <input name="userId" type="text" />
-            <input name="userPw" type="password" />
+        <form action="/member" method="post">
+            <input name="userid" type="text" />
+            <input name="userpw" type="password" />
             <input type="submit" th:value="로그인">
         </form>
     </div>
