--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,14 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>Hello</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/common.css">
+    <link rel="stylesheet" href="/css/index.css">
 </head>
 <body>
 
-    <div id="cont">
+    <div id="index-cont">
         <form action="/member" method="post">
-            <input name="userid" type="text" />
-            <input name="userpw" type="password" />
-            <input type="submit" th:value="로그인">
+            <div class="input-group input-group-lg ">
+                <span class="input-group-addon" >ID</span>
+                <input name="userId" type="text" class="form-control" placeholder="User Id" aria-describedby="sizing-addon1">
+            </div>
+            <div class="input-group input-group-lg common-margin-top-sm">
+                <span class="input-group-addon">PW</span>
+                <input name="userPw" type="password" class="form-control" placeholder="User Password" aria-describedby="sizing-addon1">
+            </div>
+            <div class="common-margin-top-sm common-full-width" >
+                <input type="submit" class="btn btn-default common-full-width" th:value="로그인">
+            </div>
+        </form>
+        <form action="/member/signup" method="get">
+            <div class="common-margin-top-sm common-full-width" >
+                <input type="submit" class="btn btn-primary common-full-width" th:value="회원가입">
+            </div>
         </form>
     </div>
 
