content화면 이동 구현 및 캘린더 이벤트 제어,전체적인 스타일 톤앤매너 설정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div id="index-cont">
-        <form action="/member" method="post">
+        <form action="/" method="post">
             <div class="input-group input-group-lg ">
                 <span class="input-group-addon" >ID</span>
                 <input name="userId" type="text" class="form-control" placeholder="User Id" aria-describedby="sizing-addon1">
