--- a/src/main/resources/templates/common/calendar.html
+++ b/src/main/resources/templates/common/calendar.html
@@ -5,26 +5,12 @@
   <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
   <script>
+    let today = new Date();
     var data = [
-      { eventName: 'Lunch Meeting w/ Mark', calendar: 'Work', color: 'orange' },
-      { eventName: 'Interview - Jr. Web Developer', calendar: 'Work', color: 'orange' },
-      { eventName: 'Demo New App to the Board', calendar: 'Work', color: 'orange' },
-      { eventName: 'Dinner w/ Marketing', calendar: 'Work', color: 'orange' },
-
-      { eventName: 'Game vs Portalnd', calendar: 'Sports', color: 'blue' },
-      { eventName: 'Game vs Houston', calendar: 'Sports', color: 'blue' },
-      { eventName: 'Game vs Denver', calendar: 'Sports', color: 'blue' },
-      { eventName: 'Game vs San Degio', calendar: 'Sports', color: 'blue' },
-
-      { eventName: 'School Play', calendar: 'Kids', color: 'yellow' },
-      { eventName: 'Parent/Teacher Conference', calendar: 'Kids', color: 'yellow' },
-      { eventName: 'Pick up from Soccer Practice', calendar: 'Kids', color: 'yellow' },
-      { eventName: 'Ice Cream Night', calendar: 'Kids', color: 'yellow' },
-
-      { eventName: 'Free Tamale Night', calendar: 'Other', color: 'green' },
-      { eventName: 'Bowling Team', calendar: 'Other', color: 'green' },
-      { eventName: 'Teach Kids to Code', calendar: 'Other', color: 'green' },
-      { eventName: 'Startup Weekend', calendar: 'Other', color: 'green' }
+      { eventName: 'Lunch Meeting w/ Mark', calendar: '', color: 'orange', createDate: new Date() },
+      { eventName: 'Game vs Portalnd', calendar: '', color: 'blue' , createDate: new Date(today.setDate( today.getDate() + 1 ))},
+      { eventName: 'School Play', calendar: '', color: 'yellow', createDate: new Date(today.setDate( today.getDate() +1 )) },
+      { eventName: 'Free Tamale Night', calendar: '', color: 'green', createDate: new Date(today.setDate( today.getDate() +1 )) }
     ];
 
     function Calendar(selector, events) {
@@ -105,10 +91,13 @@
           var self = this;
 
           this.events.forEach(function(ev) {
-            ev.date = self.current.clone().date(Math.random() * (29 - 1) + 1);
-          });
+                console.log('data2 ', ev)
+            ev.date = self.current.clone().date(ev.createDate.getDate());
 
+          });
+``
           if(this.month) {
+            console.log('this month ', new Date())
             this.oldMonth = this.month;
             this.oldMonth.className = 'month out ' + (self.next ? 'next' : 'prev');
             this.oldMonth.addEventListener('webkitAnimationEnd', function() {
@@ -283,6 +272,10 @@
           //Remove any events in the current details element
           var currentWrapper = ele.querySelector('.events');
           var wrapper = createElement('div', 'events in' + (currentWrapper ? ' new' : ''));
+
+          wrapper.addEventListener('click', function() {
+            document.getElementById('frm').submit();
+          });
 
           events.forEach(function(ev) {
             var div = createElement('div', 'event');
@@ -751,4 +744,5 @@
 
   <div id="calendar"></div>
 
+</body>
 </html>
