--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -9,6 +9,7 @@
   <div th:replace="common/nav.html"></div>
   <form id="frm" action="/contents" method="get">
     <div th:replace="common/calendar.html"></div>
+    <input name="userId" type="hidden" th:value="${userId}"/>
   </form>
 </div>
 
